[gd_scene load_steps=3 format=3 uid="uid://d6mhugrt11bb"]

[ext_resource type="Script" path="res://Scripts/MenuInicial.gd" id="1_e748w"]
[ext_resource type="FontFile" uid="uid://d1cninfllmpo" path="res://Fonts/Gamer.ttf" id="1_wcnkw"]

[node name="Node" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_e748w")

[node name="MenuInicial" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Label" type="Label" parent="CanvasLayer/MenuInicial"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -171.0
offset_top = 90.0
offset_right = 171.0
offset_bottom = 151.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_wcnkw")
theme_override_font_sizes/font_size = 76
text = "Game off jam"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuInicial"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -170.5
offset_top = -325.0
offset_right = 170.5
grow_horizontal = 2
grow_vertical = 0

[node name="Button" type="Button" parent="CanvasLayer/MenuInicial/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wcnkw")
theme_override_font_sizes/font_size = 56
text = "Jogar"

[node name="Button2" type="Button" parent="CanvasLayer/MenuInicial/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wcnkw")
theme_override_font_sizes/font_size = 56
text = "Opções"

[node name="Button3" type="Button" parent="CanvasLayer/MenuInicial/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wcnkw")
theme_override_font_sizes/font_size = 56
text = "Sair"

[node name="Options" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Options/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="Label" type="Label" parent="CanvasLayer/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wcnkw")
theme_override_font_sizes/font_size = 46
text = "SOUND:"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wcnkw")
theme_override_font_sizes/font_size = 46
text = "Master:"

[node name="HSlider" type="HSlider" parent="CanvasLayer/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="Label3" type="Label" parent="CanvasLayer/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wcnkw")
theme_override_font_sizes/font_size = 46
text = "SFX:"

[node name="HSlider2" type="HSlider" parent="CanvasLayer/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="Label4" type="Label" parent="CanvasLayer/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wcnkw")
theme_override_font_sizes/font_size = 46
text = "Music:"

[node name="HSlider3" type="HSlider" parent="CanvasLayer/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="Button" type="Button" parent="CanvasLayer/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wcnkw")
theme_override_font_sizes/font_size = 41
text = "Return"

[connection signal="mouse_entered" from="CanvasLayer/MenuInicial/VBoxContainer/Button" to="CanvasLayer" method="_on_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/MenuInicial/VBoxContainer/Button" to="CanvasLayer" method="play_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuInicial/VBoxContainer/Button2" to="CanvasLayer" method="options_pressed"]
[connection signal="pressed" from="CanvasLayer/Options/MarginContainer/VBoxContainer/Button" to="CanvasLayer" method="return_pressed"]
